--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@
 # Google Gemini API Keys
 GEMINI_FLASH_EXP_API_KEY=your-gemini-flash-exp-key-here  # For LLM1
 GEMINI_PRO_API_KEY=your-gemini-pro-key-here              # For LLM2
-# Anthropic API Keys
-CLAUDE35_SONNET_API_KEY=your-claude35-sonnet-key-here    # For LLM3
+# OpenAI API Keys
+OPENAI_API_KEY=your-openai-key-here                      # For LLM3
 
 # Note: LLM4 uses the same GEMINI_FLASH_EXP_API_KEY as LLM1
 
@@ -23,9 +23,9 @@ LLM1_MODEL=gemini-2.0-flash-exp
 LLM2_PROVIDER=google
 LLM2_MODEL=gemini-1.5-pro
 
-# LLM3 Configuration (Claude 3.5 Sonnet)
-LLM3_PROVIDER=anthropic
-LLM3_MODEL=claude-3-5-sonnet-20241022
+# LLM3 Configuration (GPT-4o)
+LLM3_PROVIDER=openai
+LLM3_MODEL=gpt-4o
 
 # LLM4 Configuration (Gemini Flash Exp)
 LLM4_PROVIDER=google
