--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ Pillow>=10.0.0
 google-generativeai>=0.3.0
 anthropic>=0.7.0
 openai>=1.0.0
+groq>=0.4.0
+
+# Token counting
+tiktoken>=0.5.0
 
 # Image processing
 numpy>=1.24.0
