Add OpenRouter to available models: - Add OpenRouter API key configuration - Add OpenRouter vision models (llama-3.2-90b-vision-instruct, grok-2-vision-1212) - Add OpenRouter language model (deepseek-r1:free)

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ GOOGLE_API_KEY=your-google-api-key-here      # For Google models
 OPENAI_API_KEY=your-openai-api-key-here      # For OpenAI models
 # GROQ_API_KEY=your-groq-api-key-here        # For Groq models (if needed)
 # ANTHROPIC_API_KEY=your-key-here            # For Anthropic models (if needed)
+# OPENROUTER_API_KEY=your-key-here           # For OpenRouter models (if needed)
 
 # Default Model Configuration (REQUIRED)
 # Used when no specific model is configured for a stage
@@ -99,6 +100,10 @@ STAGE8_MODEL1_NAME=gemini-2.0-flash-exp
 # Groq:
 # - llama-3.2-90b-vision-preview
 #
+# OpenRouter:
+# - meta-llama/llama-3.2-90b-vision-instruct
+# - x-ai/grok-2-vision-1212
+#
 # Language-Only Models (For Stages 3-8):
 #
 # Google:
@@ -109,6 +114,9 @@ STAGE8_MODEL1_NAME=gemini-2.0-flash-exp
 # - mixtral-8x7b-32768
 # - llama2-70b-4096
 # - llama-3.3-70b-versatile
+#
+# OpenRouter:
+# - deepseek/deepseek-r1:free
 
 # Stage Flow:
 # 1. Stages 1-2: Transcription (3 models in parallel)
