Add support for chatgpt-4o-latest, o1-mini, and o3-mini OpenAI models: - Add models to available models list in .env.example - Add models to PROVIDER_CONFIGS and vision_models in config.py - Add token cost rates for new models in token_costs.py

--- a/.env.example
+++ b/.env.example
@@ -87,6 +87,9 @@ STAGE8_MODEL1_NAME=gemini-2.0-flash-exp
 # OpenAI:
 # - gpt-4-turbo
 # - gpt-4-vision-preview
+# - chatgpt-4o-latest
+# - o1-mini
+# - o3-mini
 #
 # Anthropic:
 # - claude-3-5-sonnet-20241022
