Update .env.example to match current configuration: - Update stage model assignments to match current setup - Enable token tracking settings by default - Add new OpenAI models to available models list

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@
 # Provider API Keys (REQUIRED)
 GOOGLE_API_KEY=your-google-api-key-here      # For Google models
 OPENAI_API_KEY=your-openai-api-key-here      # For OpenAI models
-# GROQ_API_KEY=your-groq-api-key-here        # For Groq models (if needed)
-# ANTHROPIC_API_KEY=your-key-here            # For Anthropic models (if needed)
-# OPENROUTER_API_KEY=your-key-here           # For OpenRouter models (if needed)
+GROQ_API_KEY=your-groq-api-key-here         # For Groq models (if needed)
+ANTHROPIC_API_KEY=your-key-here             # For Anthropic models (if needed)
+OPENROUTER_API_KEY=your-key-here            # For OpenRouter models (if needed)
 
 # Default Model Configuration (REQUIRED)
 # Used when no specific model is configured for a stage
@@ -33,40 +33,40 @@ STAGE1_MODEL1_PROVIDER=google
 STAGE1_MODEL1_NAME=gemini-2.0-flash-exp
 STAGE1_MODEL2_PROVIDER=google
 STAGE1_MODEL2_NAME=gemini-1.5-pro
-STAGE1_MODEL3_PROVIDER=openai
-STAGE1_MODEL3_NAME=gpt-4-turbo
+STAGE1_MODEL3_PROVIDER=google
+STAGE1_MODEL3_NAME=gemini-exp-1206
 
 # Stage 2 - Secondary Transcription (3 models in parallel)
 STAGE2_MODEL1_PROVIDER=google
 STAGE2_MODEL1_NAME=gemini-2.0-flash-exp
 STAGE2_MODEL2_PROVIDER=google
 STAGE2_MODEL2_NAME=gemini-1.5-pro
-STAGE2_MODEL3_PROVIDER=openai
-STAGE2_MODEL3_NAME=gpt-4-turbo
+STAGE2_MODEL3_PROVIDER=google
+STAGE2_MODEL3_NAME=gemini-exp-1206
 
 # Stage 3 - Initial Review (3 models in parallel)
 STAGE3_MODEL1_PROVIDER=google
-STAGE3_MODEL1_NAME=gemini-2.0-flash-exp
+STAGE3_MODEL1_NAME=gemini-exp-1206
 STAGE3_MODEL2_PROVIDER=google
-STAGE3_MODEL2_NAME=gemini-1.5-pro
-STAGE3_MODEL3_PROVIDER=openai
-STAGE3_MODEL3_NAME=gpt-4-turbo
+STAGE3_MODEL2_NAME=gemini-2.0-flash-exp
+STAGE3_MODEL3_PROVIDER=google
+STAGE3_MODEL3_NAME=gemini-1.5-pro
 
 # Stage 4 - Comprehensive Review (3 models in parallel)
 STAGE4_MODEL1_PROVIDER=google
-STAGE4_MODEL1_NAME=gemini-2.0-flash-exp
+STAGE4_MODEL1_NAME=gemini-1.5-pro
 STAGE4_MODEL2_PROVIDER=google
-STAGE4_MODEL2_NAME=gemini-1.5-pro
-STAGE4_MODEL3_PROVIDER=openai
-STAGE4_MODEL3_NAME=gpt-4-turbo
+STAGE4_MODEL2_NAME=gemini-exp-1206
+STAGE4_MODEL3_PROVIDER=google
+STAGE4_MODEL3_NAME=gemini-2.0-flash-exp
 
 # Final Stages (5-8) - Single Model Per Stage
 # These stages use a single model for sequential processing
 # By default, uses DEFAULT_MODEL_* settings if not specified
 
 # Stage 5 - Final Transcription
-STAGE5_MODEL1_PROVIDER=google
-STAGE5_MODEL1_NAME=gemini-2.0-flash-exp
+STAGE5_MODEL1_PROVIDER=openai
+STAGE5_MODEL1_NAME=o1-mini
 
 # Stage 6 - Punctuation
 STAGE6_MODEL1_PROVIDER=google
@@ -74,11 +74,16 @@ STAGE6_MODEL1_NAME=gemini-2.0-flash-exp
 
 # Stage 7 - Translation
 STAGE7_MODEL1_PROVIDER=google
-STAGE7_MODEL1_NAME=gemini-2.0-flash-exp
+STAGE7_MODEL1_NAME=gemini-exp-1206
 
 # Stage 8 - Commentary
 STAGE8_MODEL1_PROVIDER=google
-STAGE8_MODEL1_NAME=gemini-2.0-flash-exp
+STAGE8_MODEL1_NAME=gemini-exp-1206
+
+# Token Tracking Settings (optional)
+TOKEN_TRACKING_ENABLED=true           # Enable token usage tracking
+DISPLAY_REALTIME_USAGE=true          # Show usage in real-time
+SAVE_USAGE_REPORT=true               # Save usage report to file
 
 # Available Models by Provider:
 #
@@ -137,8 +142,3 @@ STAGE8_MODEL1_NAME=gemini-2.0-flash-exp
 #    - Stage 6: Add punctuation
 #    - Stage 7: Translate to English
 #    - Stage 8: Generate commentary
-
-# Token Tracking Settings (optional)
-#TOKEN_TRACKING_ENABLED=true           # Enable token usage tracking
-#DISPLAY_REALTIME_USAGE=true          # Show usage in real-time
-#SAVE_USAGE_REPORT=true               # Save usage report to file
