--- a/.env.example
+++ b/.env.example
@@ -111,6 +111,7 @@ SAVE_USAGE_REPORT=true               # Save usage report to file
 # OpenRouter:
 # - meta-llama/llama-3.2-90b-vision-instruct
 # - x-ai/grok-2-vision-1212
+# - qwen/qvq-72b-preview
 #
 # Language-Only Models (For Stages 3-8):
 #
