Add 01-ai/yi-vision model: - Add to OpenRouter's Vision + Language models in config.py - Update vision models validation list - Document in .env.example under Vision + Language Models - Maintain consistent model capabilities across files

--- a/.env.example
+++ b/.env.example
@@ -112,6 +112,7 @@ SAVE_USAGE_REPORT=true               # Save usage report to file
 # - meta-llama/llama-3.2-90b-vision-instruct
 # - x-ai/grok-2-vision-1212
 # - qwen/qvq-72b-preview
+# - 01-ai/yi-vision
 #
 # Language-Only Models (For Stages 3-8):
 #
