Add mistralai/pixtral-large-2411 model: - Add to OpenRouter's Vision + Language models in config.py - Update vision models validation list - Document in .env.example under Vision + Language Models - Maintain consistent model capabilities across files

--- a/.env.example
+++ b/.env.example
@@ -104,6 +104,7 @@ SAVE_USAGE_REPORT=true               # Save usage report to file
 # - gemini-2.0-flash-exp
 # - gemini-1.5-pro
 # - gemini-exp-1206
+# - gemini-2.0-flash-thinking-exp
 #
 # Groq:
 # - llama-3.2-90b-vision-preview
@@ -113,6 +114,7 @@ SAVE_USAGE_REPORT=true               # Save usage report to file
 # - x-ai/grok-2-vision-1212
 # - qwen/qvq-72b-preview
 # - 01-ai/yi-vision
+# - mistralai/pixtral-large-2411
 #
 # Language-Only Models (For Stages 3-8):
 #
