Add qwen/qwen-2-vl-72b-instruct model: - Add to OpenRouter's Vision + Language models in config.py - Update vision models validation list - Document in .env.example under Vision + Language Models - Maintain consistent model capabilities across files

--- a/.env.example
+++ b/.env.example
@@ -115,6 +115,7 @@ SAVE_USAGE_REPORT=true               # Save usage report to file
 # - qwen/qvq-72b-preview
 # - 01-ai/yi-vision
 # - mistralai/pixtral-large-2411
+# - qwen/qwen-2-vl-72b-instruct
 #
 # Language-Only Models (For Stages 3-8):
 #
