Add TogetherAI support: - Add TogetherAI provider configuration and models - Implement TogetherAI client in stage_model.py - Add token counting encoder for Together models - Update .env.example with Together API key and model documentation - Add meta-llama/Llama-3.3-70B-Instruct-Turbo model

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ OPENAI_API_KEY=your-openai-api-key-here      # For OpenAI models
 GROQ_API_KEY=your-groq-api-key-here         # For Groq models (if needed)
 ANTHROPIC_API_KEY=your-key-here             # For Anthropic models (if needed)
 OPENROUTER_API_KEY=your-key-here            # For OpenRouter models (if needed)
+TOGETHER_API_KEY=your-key-here              # For Together models (if needed)
 
 # Default Model Configuration (REQUIRED)
 # Used when no specific model is configured for a stage
@@ -130,6 +131,9 @@ SAVE_USAGE_REPORT=true               # Save usage report to file
 #
 # OpenRouter:
 # - deepseek/deepseek-r1:free
+#
+# Together:
+# - meta-llama/Llama-3.3-70B-Instruct-Turbo
 
 # Stage Flow:
 # 1. Stages 1-2: Transcription (3 models in parallel)
