Fix stage input visibility: - Add SHOW_STAGE_INPUTS setting to control input visibility - Add should_show_stage_inputs function to token_costs.py - Update model_manager.py to respect input visibility setting - Add hidden input message when inputs are disabled

--- a/.env.example
+++ b/.env.example
@@ -85,6 +85,7 @@ STAGE8_MODEL1_NAME=gemini-exp-1206
 TOKEN_TRACKING_ENABLED=true           # Enable token usage tracking
 DISPLAY_REALTIME_USAGE=true          # Show usage in real-time
 SAVE_USAGE_REPORT=true               # Save usage report to file
+SHOW_STAGE_INPUTS=true               # Show inputs passed to current stage in markdown files
 
 # Available Models by Provider:
 #
