--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,11 @@ DEFAULT_MODEL_TEMPERATURE=0.7                 # Temperature (0.0-1.0)
 DEFAULT_MODEL_TOP_P=0.95                     # Top-p sampling (0.0-1.0)
 DEFAULT_MODEL_MAX_TOKENS=0                   # Max tokens (0 for default)
 
+# Fallback Model Configuration (REQUIRED)
+# Used when primary model encounters errors
+DEFAULT_FALLBACK_PROVIDER=google             # Provider name for fallback model
+DEFAULT_FALLBACK_MODEL=gemini-exp-1206       # Model name for fallback
+
 # Stage-Based Model Configuration
 # Format for each stage:
 # STAGE{N}_MODEL{M}_PROVIDER=provider_name   # Provider of the model
