--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DEFAULT_MODEL_MAX_TOKENS=0                   # Max tokens (0 for default)
 # Fallback Model Configuration (REQUIRED)
 # Used when primary model encounters errors
 DEFAULT_FALLBACK_PROVIDER=google             # Provider name for fallback model
-DEFAULT_FALLBACK_MODEL=gemini-exp-1206       # Model name for fallback
+DEFAULT_FALLBACK_MODEL=gemini-2.0-flash-exp  # Model name for fallback
 
 # Stage-Based Model Configuration
 # Format for each stage:
